Tabs_scrollbar and tab height fixes

--- a/app/assets/stylesheets/sephora_style_guide/components/_tabs.scss
+++ b/app/assets/stylesheets/sephora_style_guide/components/_tabs.scss
@@ -105,7 +105,6 @@ select {
 }
 
 .tabs-container {
-  max-height: 35px;
   overflow: hidden;
 }
 
